Fixed padding in order to let the image overflows

--- a/css/index.css
+++ b/css/index.css
@@ -229,12 +229,28 @@ body > [type="checkbox"]:checked ~ header .menu {
     display: none; } }
 
 .section_details-content {
-  padding-top: 31px; }
+  padding-top: 31px;
+  padding-inline-end: 0; }
+
+.details_content-header,
+.photo_information-list,
+.details_content-figure-picture active-picture,
+.details_content-summary-article {
+  padding-inline-end: 14px; }
 
 .details_content-figure,
 .image_list,
 .photo_information-list {
   display: grid; }
+
+@media (min-width: 1440px) {
+  .details_content-header,
+  .photo_information-list,
+  .details_content-figure-picture active-picture,
+  .details_content-summary-article {
+    padding-inline-end: 0; }
+  .section_details-content {
+    padding-inline-end: 135px; } }
 
 .details_content-breadcrumb {
   position: relative; }
